# Phoenix-Perp-MM

./: .env.example  .gitignore  Anchor.toml  Cargo.toml  README.md
.github/workflows/: ci.yml
backtester/: compare_venues.py  fetch_funding.py  report.py  requirements.txt  simulate_basis.py  stress_test.py  utils.py
backtester/notebooks/: funding_analysis.ipynb
cranker/: Cargo.toml
cranker/src/: main.rs
dashboard/: package-lock.json  package.json
dashboard/app/: globals.css  layout.tsx  page.tsx
dashboard/app/api/engine/: route.ts
dashboard/app/api/funding/: route.ts
dashboard/app/api/history/: route.ts
dashboard/components/: AlertBanner.tsx  EngineControls.tsx  FundingChart.tsx  FundingRatePanel.tsx  MarketHealthPanel.tsx  PositionDashboard.tsx  RiskGauge.tsx
dashboard/lib/: engine-api.ts  funding-api.ts  types.ts
engine/: Cargo.toml
engine/src/: config.rs  executor.rs  funding_monitor.rs  hedge_engine.rs  main.rs  oracle_client.rs  perp_client.rs  risk_monitor.rs  spot_client.rs  state_server.rs  types.rs
engine/src/tests/: funding_monitor_tests.rs  hedge_engine_tests.rs  mod.rs  risk_monitor_tests.rs
programs/phoenix-mm-onchain/: Cargo.toml
programs/phoenix-mm-onchain/src/: errors.rs  fixed_math.rs  lib.rs  phoenix_cpi.rs  state.rs
programs/phoenix-mm-onchain/src/instructions/: close.rs  initialize.rs  mod.rs  update_quotes.rs
server/: .env.example  Cargo.toml  Dockerfile  config.toml  fly.toml
server/src/: aggregator.rs  broadcast.rs  cli.rs  config.rs  engine.rs  error.rs  inventory.rs  main.rs  metrics.rs  oracle.rs  phoenix_client.rs  risk.rs  state.rs  types.rs
server/src/feeds/: binance.rs  drift.rs  hyperliquid.rs  mod.rs  phoenix.rs
server/src/strategy/: mod.rs  multi_level.rs  quoting.rs
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx
web/src/components/: ExecutionQualityScore.tsx  FundingRateChart.tsx  LiveIndicator.tsx  SlippageSimulator.tsx  SpreadComparison.tsx  VenueSelector.tsx
web/src/hooks/: useFundingHistory.ts  useMarketFeed.ts  useSlippage.ts
web/src/lib/: formatters.ts  metrics.ts
web/src/types/: market.ts
