[package]
name = "phoenix-mm-cranker"
version = "0.1.0"
description = "Off-chain cranker for Phoenix on-chain market maker"
edition = "2021"

[[bin]]
name = "phoenix-mm-cranker"
path = "src/main.rs"

[dependencies]
solana-sdk = "1.14"
solana-client = "1.14"
borsh = "0.10"
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
sha2 = "0.10"
shellexpand = "3"
