[package]
name = "phoenix-mm"
version = "0.1.0"
edition = "2021"
description = "Inventory-aware market maker for Phoenix DEX on Solana"

[features]
default = []
# Enable live Phoenix DEX connectivity (requires phoenix-sdk which has heavy deps)
live = ["phoenix-sdk", "solana-sdk", "solana-client"]

[dependencies]
# Phoenix + Solana (behind feature flag due to upstream dep conflicts)
phoenix-sdk = { version = "0.8", optional = true }
solana-sdk = { version = "1.18", optional = true }
solana-client = { version = "1.18", optional = true }

# Async runtime
tokio = { version = "1", features = ["full"] }

# CLI
clap = { version = "4", features = ["derive"] }

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# Serialization + config
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = "1"
thiserror = "2"

# Environment
dotenvy = "0.15"
