[package]
name = "phoenix-mm-onchain"
version = "0.1.0"
description = "On-chain Avellaneda-Stoikov market maker for Phoenix DEX"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "phoenix_mm_onchain"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { workspace = true }
borsh = "0.10"

[dev-dependencies]
# For cross-validation tests only
